# service

./: Makefile.am  README.md  configure.in  framework.sln
SIPService/: Config.cpp  Config.h  DllMain.cpp  DllMain.h  IModule.h  IMsgHandle.h  IUser.h  IVRUser.h  ReadMe.txt  SIPService.cpp  SIPService.h  SIPService.vcproj  User.h  UserMgr.cpp  UserMgr.h  stdafx.cpp  stdafx.h
common/: Define.h  Exception.h
conf/: IPBCService.conf  SIPService.conf
framework/: Config.cpp  Config.h  Consoles.cpp  Consoles.h  Framework.vcproj  HeartBeat.cpp  HeartBeat.h  IDaemon.cpp  IDaemon.h  IEntrance.cpp  IEntrance.h  IModule.h  IModuleMgr.cpp  IModuleMgr.h  LinuxDaemon.cpp  LinuxDaemon.h  LinuxEntrance.cpp  LinuxEntrance.h  LinuxModuleMgr.cpp  LinuxModuleMgr.h  Makefile.am  ReadMe.txt  WinModuleMgr.cpp  WinModuleMgr.h  WinService.cpp  WinService.h  WindowsEntrance.cpp  WindowsEntrance.h  framework.cpp  main.cpp  stdafx.cpp  stdafx.h  targetver.h
framework/conf/: IPBCService.conf
logger/: ConsoleLog.cpp  ConsoleLog.h  DatabaseLog.h  DllMain.cpp  DllMain.h  EngineMaker.cpp  EngineMaker.h  FileLog.cpp  FileLog.h  LogEngine.h  LogException.h  LogMsg.h  LogService.cpp  LogService.h  Logger.cpp  Logger.h  Makefile.am  ReadMe.txt  logger.vcproj  stdafx.cpp  stdafx.h  targetver.h
