#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT(IPBCService, 3.1.0, luoxuan@comtom.cn)
AC_CONFIG_SRCDIR([framework/main.cpp])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(IPBCService, 3.1.0)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

AC_ENABLE_SHARED
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lACE':
AC_CHECK_LIB([ACE], [main])
# FIXME: Replace `main' with a function in `-ltinyxml':
AC_CHECK_LIB([tinyxml], [main])

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK
AC_CHECK_FUNCS([getcwd memset strcasecmp strerror strrchr strstr])

AC_CONFIG_FILES([Makefile
                 framework/Makefile
                 logger/Makefile])
AC_OUTPUT
